ahs/assets/css/main.css
/* ... */
.btn-primary {
  font-family: "Roboto Condensed", sans-serif;
  text-align: center;
  border: 1px solid #ffffff;
  text-transform: uppercase; }
  .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
    box-shadow: 0 0 0 0.1rem rgba(255, 255, 255, 0.9) !important;
    border: 1px solid #ffffff !important; }

.form-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #fff; }
  .form-links ul li {
    display: inline-block; }
    .form-links ul li a {
      text-transform: uppercase;
      color: #fff;
      font-size: 13px; }
    .form-links ul li:first-of-type {
      padding-right: 10px; }
      .form-links ul li:first-of-type:after {
        display: inline-block;
        content: "|";
        margin-left: 10px; }

.listing-table table {
  border: 1px solid #dadada;
  width: 100%;
  border-radius: 6px;
  margin-bottom: 20px;
  border-spacing: 0;
  border-collapse: separate; }
  .listing-table table tfoot tr th, .listing-table table tfoot tr td,
  .listing-table table thead tr th,
  .listing-table table thead tr td,
  .listing-table table tbody tr th,
  .listing-table table tbody tr td {
    color: #898989;
    padding: 12px 15px;
    font-family: "Roboto Condensed", sans-serif; }
  .listing-table table thead {
    background-color: #f1f1f2; }
    .listing-table table thead tr th {
      padding: 8px 15px;
      white-space: nowrap;
      font-size: 12px;
      text-transform: uppercase;
      border-bottom: 1px solid #dadada; }
      .listing-table table thead tr th:nth-of-type(2) {
        border-left: 1px solid #dadada;
        border-right: 1px solid #dadada; }
      .listing-table table thead tr th:first-of-type {
        border-top-left-radius: 6px; }
      .listing-table table thead tr th:last-of-type {
        border-top-right-radius: 6px; }
  .listing-table table tbody tr td {
    font-size: 12px;
    white-space: nowrap; }
    .listing-table table tbody tr td:nth-of-type(2) {
      white-space: normal;
      background-color: #d4deef;
      color: #1a326b;
      border-left: 1px solid #dadada;
      border-right: 1px solid #dadada; }
  .listing-table table tfoot {
    background-color: #f1f1f2; }
    .listing-table table tfoot tr td {
      padding: 3px 15px;
      border-top: 1px solid #dadada;
      border-radius: 0 0 6px 6px; }
      .listing-table table tfoot tr td label {
        font-family: "Roboto Condensed", sans-serif;
        font-size: 9px; }
      .listing-table table tfoot tr td .form-control {
        vertical-align: middle;
        display: inline-block;
        width: auto;
        padding: 2px 0;
        font-size: 10px;
        height: auto;
        min-width: 50px; }
        .listing-table table tfoot tr td .form-control .edd-value {
          padding: 0 12px; }
.listing-table .btn {
  min-width: 148px;
  margin-right: 15px; }

body {
  font-family: "Roboto Condensed", sans-serif; }

#wrapper {
  max-width: 1920px;
  margin-right: auto;
  margin-left: auto; }

.inner-bg {
  height: auto;
  background: url("imgs/short-banner.jpg") no-repeat center top;
  background-size: cover; }

.br-box {
  background-color: #1a326b; }
  .br-box h2 {
    color: #ffffff;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 25px;
    padding: 15px 30px 15px 119px;
    margin: 0;
    text-transform: uppercase; }

.grey-box {
  background-color: #ddd;
  position: relative;
  padding-bottom: 144px;
  height: auto; }
  @media screen and (max-height: 768px) {
    .grey-box {
      min-height: 640px; } }
  @media screen and (min-width: 1400px) {
    .grey-box {
      height: calc(100vh - 165px); } }
  .grey-box .footer {
    background-color: #1a326b;
    position: absolute;
    top: auto;
    right: 0;
    bottom: 0;
    left: 0;
    display: block;
    margin: auto; }
    .grey-box .footer .solid-bg {
      background-color: rgba(255, 255, 255, 0.36); }
  .grey-box .bg-white {
    background-color: #ffffff;
    min-height: 490px;
    height: 100%; }

.menu-button {
  background-color: #020a2d;
  width: 60px;
  height: 60px;
  position: relative;
  border: none;
  box-shadow: none; }
  .menu-button .menu-icon {
    width: 30px;
    height: 24px;
    background: url("imgs/hamburger.png") no-repeat center center;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    display: block; }

.right-menu {
  visibility: hidden;
  display: block;
  padding: 0;
  margin: 0 0 0 -14px; }
  .right-menu li {
    display: inline-block;
    width: 100%;
    max-width: 160px;
    border-bottom: 1px solid transparent; }
    .right-menu li a {
      color: #919090;
      font-size: 16px;
      line-height: 18px;
      width: 100%;
      background-color: #eeeff2;
      display: inline-block;
      padding: 12px 10px 12px 27px;
      text-transform: uppercase; }
    .right-menu li.active a {
      color: #000000;
      background-color: #d4deef; }
  .right-menu.active {
    visibility: visible; }

.listing-form {
  padding-top: 20px;
  padding-bottom: 30px; }
  .listing-form label {
    font-family: "Roboto Condensed", sans-serif;
    color: #919090;
    font-size: 15px;
    line-height: 1;
    text-transform: uppercase;
    font-weight: 400;
    display: inline-block;
    margin-bottom: 0; }
  .listing-form .form-control {
    font-family: "Roboto Condensed", sans-serif;
    background-color: #f1f1f2;
    font-size: 12px;
    text-transform: uppercase;
    border: 1px solid #dadada; }

.edd-root {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  position: relative;
  width: 100%;
  user-select: none;
  font-family: "Roboto Condensed", sans-serif;
  font-weight: 300;
  font-size: 16px;
  color: #898989; }
  .edd-root * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale; }
/* ... */

